--- a/_posts/2019-12-20-the-us-narrative-today.html
+++ b/_posts/2019-12-20-the-us-narrative-today.html
@@ -1765,107 +1765,107 @@ stories:
   domain: http://www.thenewsherald.com/
   link: http://www.thenewsherald.com/downriver_life/regional/baby-in-a-manger-poster/image_99e13ec2-5371-5988-9a75-7ebdde5dad58.html
 images:
-- name: capital-battle-capitolbattle-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dali-three.jpg
-- name: server-cloud-server-racks-door-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-dali-three.jpg
-- name: old-granary-field-oldhouse-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-neo-instinct.jpg
-- name: oldroad-old-road-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-deep-connections.jpg
-- name: white-house-lawn-white-house-window-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-kandinsky-bv.jpg
-- name: gypsy-wagon-gypsywagon-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-rainbow-festival.jpg
-- name: oldhouse-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-post-modern.jpg
-- name: status-berlin-status-berlin-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-colorful-blocks.jpg
-- name: razorcliff-razorcliff-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-atari-missle.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-hot-spicy.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
-- name: stories-lincoln-consitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-lincoln-consitution.jpg
-- name: trucksilo-trucksilo-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-blue-electricity.jpg
-- name: christianity-christianity-under-construction-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-crabapple.jpg
-- name: amusement-park-amusement-park-2-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-free-woman.jpg
-- name: ellis-island-ellis-island-room-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-creativity.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-really-hot.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-really-hot.JPG
-- name: nazi-invasion-IMG_4721.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_4721.jpg
-- name: adam-smith-adam-smith-yellow-collage.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-yellow-collage.jpg
-- name: la-muse-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dragon-desert-looking.jpg
-- name: catacombs-catacombs-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-monet-one.jpg
-- name: capital-battle-capitolbattle-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-far-away.jpg
-- name: trucksilo-trucksilo-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-plentiful.jpg
-- name: bluelake-purple-pond-file-00-00-38-67.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-purple-pond-file-00-00-38-67.jpg
-- name: rockingchair-rockingchair-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purp-paper.jpg
-- name: old-granary-field-granaryfield-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-atari-missle.jpg
-- name: old-door-lock-old-door-lock-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-crafty-painting.jpg
+- name: windowmountain-window-mountain-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-dark-soul.jpg
+- name: copper-circuit-stainless-tree-clouds.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-stainless-tree-clouds.jpg
+- name: crow-crow-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-nazi-poster.jpg
+- name: miamibeach-miamibeach-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-space-pizza.jpg
+- name: copper-circuit-train-small-town-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-small-town-station.jpg
+- name: stories-castle-on-hill-edinburgh-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-castle-on-hill-edinburgh-copper-circuit.JPG
+- name: machine-road-machine-road-jap-dys-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-dys-1.jpg
+- name: cannon-facing-cannon-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-blue-circuit.jpg
+- name: scream-DSC_0027.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-DSC_0027.jpg
+- name: adam-smith-adam-smith-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-really-hot.jpg
+- name: copper-circuit-IMG_6200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_6200.jpg
+- name: dragon-desert-desert-dragon-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-matrix.jpg
+- name: gears-4882162452-fa3126b38d-b-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-gan-vogh.jpg
+- name: nazi-invasion-graffitti-red-hat-man.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-graffitti-red-hat-man.jpg
+- name: store-on-corner-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-satan-red.jpg
+- name: nazi-invasion-lighthouse_36679514616_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-lighthouse_36679514616_o.jpg
+- name: server-cloud-server-racks-door-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-blue-circuit-3.jpg
+- name: blossombar-smooth-ride-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-smooth-ride-file-00-00-24-99.jpg
+- name: art-museum-art-museum-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-blue-circuit-4.jpg
+- name: white-house-lawn-white-house-window-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-alien-goggles.jpg
+- name: school-clouds-church-clouds-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-post-modern.jpg
+- name: berlinwall2-berlinwall-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-plentiful.jpg
+- name: oldbarn-oldbarn-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-dark-dali.jpg
+- name: store-on-corner-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-mucha-mult.jpg
+- name: dc-statue-dcstatue-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-clean-view.jpg
+- name: berlinwall2-berlinwall-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-crafty-painting.jpg
+- name: rockingchair-rockingchair-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-ww2-dresden.jpg
+- name: sand-hand-sand-hand-blue-circuit-4.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-blue-circuit-4.jpg
+- name: gears-4882162452-fa3126b38d-b-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-nazi-poster.jpg
 - name: scream-IMG_7788.jpg
   url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7788.jpg
-- name: bf-skinner-chess-in-the-park-with-pigeons.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-chess-in-the-park-with-pigeons.jpg
-- name: oldbarn-oldbarn-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-atari-missle.jpg
-- name: stories-fence-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-fence-dark-dali.jpg
-- name: cargo-ship-cargo-ship-on-sea-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-dark-soul.jpg
-- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
-- name: catacombs-catacombs-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-constitution.jpg
-- name: nyc-flag-nycflag-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-clean-view.jpg
-- name: la-muse-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-building-trees-sky.jpg
-- name: copper-circuit-bletchley-computer-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-bletchley-computer-racks.jpg
-- name: aws-s3-square-schoolhouse-dark-dali-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-schoolhouse-dark-dali-square.jpg
-- name: paris-paris-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-deep-connections.jpg
-- name: locked-up-steam-lock-up-steam-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-diego-rivera1.jpg
-- name: walled-garden-walled-garden-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-colored-circuits.jpg
-- name: stalin-time-sub-way-bart-going-by.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-sub-way-bart-going-by.jpg
-- name: oldroad-old-road-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-colorful-dream.jpg
-- name: old-granary-field-oldhouse-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-rainbow-festival.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-smoking-cigarette.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-smoking-cigarette.JPG
-- name: nazi-invasion-IMG_8472.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_8472.jpg
-- name: aws-s3-stories-fence-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-crabapple.jpg
-- name: nyc-flag-api-conversations-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-api-conversations-alien-goggles.jpg
-- name: paris-paris-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-rain.jpg
-- name: bf-skinner-docks-big-cosco-ship.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-docks-big-cosco-ship.jpg
-- name: victoria-victoria-corner-hotel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel.jpg
+- name: nyc-flag-nycflag-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-aqua.jpg
+- name: stalin-time-dandelions-in-rocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-dandelions-in-rocks.jpg
+- name: machine-road-machine-road-blue-brush.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-blue-brush.jpg
+- name: stalin-time-old-computer-bletchley-crypto.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-computer-bletchley-crypto.jpg
+- name: blossombar-alien-goggles-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-alien-goggles-file-00-00-24-99.jpg
+- name: aws-s3-stories-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-art-museum-dark-dali.jpg
+- name: dragon_close-up-udnie.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon_close-up-udnie.jpg
+- name: oldhouse-granaryfield.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield.jpg
+- name: statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-ww2-dresden.jpg
+- name: legal-statue-legalstatue-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-dark-dali.jpg
+- name: statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-deep-connections.jpg
+- name: fence-fence-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-far-away.jpg
+- name: store-on-corner-store-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-smooth-ride.jpg
+- name: beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-nazi-poster.jpg
+- name: bordercrossing-bordercrossing-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-aqua.jpg
+- name: berlinwall2-berlinwall-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-post-modern.jpg
+- name: abandonedbuildings_alberto_giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_alberto_giacometti.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-blue-circuit-4.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-blue-circuit-4.JPG
+- name: copper-circuit-grafitti-woman-bangs.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-grafitti-woman-bangs.jpg
+- name: aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
+- name: aws-s3-dunes-dunes-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-dunes-dunes-still-1200.jpg
 ---
 Big Second Quarter Lifts Bengals Past Bears.&nbsp;Salisbury Lawyer Receives Administrative Suspension.&nbsp;Plastic Products Company Coming To Kershaw County.&nbsp;How To Celebrate National Ugly Christmas Sweater Day.&nbsp;Taking Care Of Your Office Appliances In The Right Way!.&nbsp;The Five Best Concerts In Miami This Weekend.&nbsp;Tireless Church, Choral Leader Korey Scales Of Martinsville Now 'asleep In Heavenly Peace'.&nbsp;Study Claims Fracking Ban Would Be 'catastrophic'.&nbsp;
